--- a/index_files/libs.css
+++ b/index_files/libs.css
@@ -6004,9 +6004,9 @@
       width: 75%
     }
   
-    .col-md-8 {
+    /* .col-md-8 {
       width: 66.66666667%
-    }
+    } */
   
     .col-md-7 {
       width: 58.33333333%
@@ -6068,9 +6068,9 @@
       right: 41.66666667%
     }
   
-    .col-md-pull-4 {
+    /* .col-md-pull-4 {
       right: 33.33333333%
-    }
+    } */
   
     .col-md-pull-3 {
       right: 25%
@@ -6226,9 +6226,9 @@
       width: 75%
     }
   
-    .col-lg-8 {
+    /* .col-lg-8 {
       width: 66.66666667%
-    }
+    } */
   
     .col-lg-7 {
       width: 58.33333333%
@@ -6290,9 +6290,9 @@
       right: 41.66666667%
     }
   
-    .col-lg-pull-4 {
+    /* .col-lg-pull-4 {
       right: 33.33333333%
-    }
+    } */
   
     .col-lg-pull-3 {
       right: 25%
